# Haskell-Pro

./: README.md  gdc.hs
fib-para/: README.md  fib-para.cabal
fib-para/.stack-work/install/3573363d/flag-cache/: abstract-deque-0.3-HsNSfU9Tgm8E1vVRMg1lQ0  abstract-par-0.3.3-FIXQeoD8JqS8Il9xkWRf07  cereal-0.5.4.0-BsAGxfp8yAs3CiRo2E875e  ghc-paths-0.1.0.9-AhaDlGOsRAepox069XzG  haskeline-0.7.4.0-3Ila3ipRrWK3QKHiCX7j1i  intero-0.1.23  math-functions-0.2.1.0-KPr6PZcLbtiGnQNnW2g0oV  monad-par-0.3.4.8-4MpI1cnQuTR5IrG6dFwtI7  monad-par-extras-0.3.3-5IzzcdedS5bLAPIhSP2Ku6  mtl-2.2.1-BLKBelFsPB3BoFeSWSOYj6  mwc-random-0.13.6.0-FYg9HqO0pqB8vcniiPVzVy  parallel-3.2.1.1-KQJHWCcq2Ka569Stb10nhx  primitive-0.6.2.0-4578caNkWQ54Gt1mxLF2Yh  random-1.1-9tceXaeYIMZ4JrKq20Egog  syb-0.7-4OKdCpwGutyB1rNRmoa0ya  vector-0.12.0.1-692PQMDMB6pIQ1uGwefDcQ  vector-th-unbox-0.2.1.6-46ifXx3IRXQF8ghjmDE5S
fib-para/src/: Main.hs
hjq/: hjq.cabal
hjq/.stack-work/install/fab39206/flag-cache/: HUnit-1.5.0.0-DvjF79OHhCC7SzfeEty4OI  StateVar-1.1.0.4-5dJbnTVECtEAhfJXPZKdbO  adjunctions-4.3-A5jfd1yrmaY4DRMJuiquBp  aeson-1.1.2.0-IYYaF432Hu8HQKp7no3ap1  aeson-pretty-0.8.5-5mYVbvFiTi7CCeIahcTyxL  attoparsec-0.13.1.0-3ql4hcH9pGfBAlE21oqFTQ  base-compat-0.9.3-m1TEyTenyr5nJN40TpHVj  base-orphans-0.6-AbJ3lKVXygDCG0eeQEv8Iu  bifunctors-5.4.2-KcF2f75KyQm5BjgJ8WkHCw  cabal-doctest-1.0.3-424yp4GSQAZHQyNl3c0zus  call-stack-0.1.0-FYVrCPXGP9EGAuTW32963O  (+42 more)
hjq/app/: Main.hs
hjq/src/Data/: Hjq.hs
hjq/src/Data/Hjq/: Parser.hs  Query.hs
hjq/test/: Spec.hs
mvarTest/: README.md  mvarTest.cabal
mvarTest/app/: Main.hs
(+16 files in other folders)
